--- a/src/assets/css/cards.css
+++ b/src/assets/css/cards.css
@@ -3,24 +3,41 @@
 } 
 .card{
   background: wheat;
+  /* border: 2px solid black; */
+}
+
+.btn-git{
+  margin: 0;
+  /* border: 2px solid white; */
+  display: flex;
+  /* margin: auto; */
+  justify-content: center;
 }
 .card:hover {
   box-shadow: 5px 10px 20px 1px rgba(255, 255, 255, 0.273) !important;
   transition: all 0.7s linear;
 }
 .card-body {
-  height: 50%;
+  height: 100%;
   padding: 0.5rem 0 !important;
+  /* border: 2px solid saddlebrown; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  overflow: hidden;
 }
 .presentacion {
   padding: 0.5rem 0;
+  /* border: 3px solid black; */
+  margin-bottom: 0;
+  margin-top: 1rem;
   font-size: 1rem;
-  height: 40%;
+  height: 200px;
   overflow: auto;
 }
 .overflow {
   overflow: hidden;
-  min-height: 215px;
+  /* min-height: 15px; */
 }
 .card-img-top{
   transform: scale(1);
@@ -34,11 +51,12 @@
   height: 100%;
 }
 .card{
-  height: 65vh;
+  height: 90vh;
 }
 .diseño{
   display: inline;
   font-weight: 700;
+
 }
 .edad{
   display: inline;
