--- a/src/assets/css/cards.css
+++ b/src/assets/css/cards.css
@@ -18,7 +18,7 @@
   transition: all 0.7s linear;
 }
 .card-body {
-  height: 100%;
+  height: 60%;
   padding: 0.5rem 0 !important;
   /* border: 2px solid saddlebrown; */
   display: flex;
@@ -27,12 +27,13 @@
   overflow: hidden;
 }
 .presentacion {
-  padding: 0.5rem 0;
+  padding: 1rem 0;
   /* border: 3px solid black; */
+  text-align: center;
   margin-bottom: 0;
   margin-top: 1rem;
   font-size: 1rem;
-  height: 200px;
+  height: 150px;
   overflow: auto;
 }
 .overflow {
