--- a/src/assets/css/styleA.css
+++ b/src/assets/css/styleA.css
@@ -29,23 +29,25 @@
     background-color: #435dcf;
     margin-left: 10px;
     box-shadow: 0 4px 2px 0 rgba(0,0,0,0.2), 0 6px 10px 0 rgba(0,0,0,0.19);
-    -webkit-transition-duration: 0.4s; /* Safari */
+    -webkit-transition-duration: 0.4s; 
     transition-duration: 0.4s;
+    border-radius: 10px;
 }
 
 .New:hover{
-    background-color:  #51c8d8; /* Green */
+    background-color:  #51c8d8; 
     color: white;
 }
 
 .botonesB{
     margin-left: 10px;
     margin-top: 8px;
-    border: none;
-    background-color: #435dcf;
+    
+    
     -webkit-transition-duration: 0.4s; 
     transition-duration: 0.4s;
     border: 2px solid #435dcf;
+    border-radius: 8px;
     width: 50px;
 }
 
