--- a/src/assets/css/styleA.css
+++ b/src/assets/css/styleA.css
@@ -6,7 +6,7 @@
     /* justify-content: center; */
     /* align-items: center; */
     text-align:center;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: block;
 }
 
