--- a/src/assets/css/ahorcadoAR.css
+++ b/src/assets/css/ahorcadoAR.css
@@ -7,4 +7,14 @@
     align-self: center;
     width: 200px;
     font-size: 20px;
+    border: 2px solid #435dcf;
+    background-color: #435dcf;
+    color: rgb(208, 227, 249);
+    padding: 7px;
+    border-radius: 10px;
+}
+.boton-reinicio:hover{
+
+    background-color: #4156b3;
+
 }
