--- a/src/assets/css/cards.css
+++ b/src/assets/css/cards.css
@@ -1,8 +1,22 @@
 .card-img-top{
-  height:max-content;
+  height:190%;
+  width: auto;
+  
 } 
+.card-header
+{
+  height: 110px;
+  background-color: rgb(44, 74, 101);
+}
+.titulo{
+  text-align:left;
+}
 .card{
-  background: wheat;
+  background: rgb(233, 223, 205);
+  width: 100%;
+  max-width: 23rem;
+  margin: 0 auto;
+  transition: 0.75s all ease-in-out;
   /* border: 2px solid black; */
 }
 .btn-git{
@@ -14,10 +28,11 @@
 }
 .card:hover {
   box-shadow: 5px 10px 20px 1px rgba(255, 255, 255, 0.273) !important;
-  transition: all 0.7s linear;
+  transition: all 0.75s linear;
+  transform: scale(1.06);
 }
 .card-body {
-  height: 60%;
+  height: 70%;
   padding: 0.5rem 0 !important;
   /* border: 2px solid saddlebrown; */
   display: flex;
@@ -26,19 +41,22 @@
   overflow: hidden;
 }
 .presentacion {
-  padding: 1rem 0rem;
+  
+  padding: 0.5rem 0rem;
   padding-left: 1rem;
   padding-right: 1rem;
   /* border: 3px solid black; */
-  text-align: center;
+  text-align:start;
   margin-bottom: 0;
-  margin-top: 1rem;
   font-size: 1rem;
-  height: 150px;
+  height: 130%;
   overflow: auto;
+  font-weight:  bolder;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .overflow {
   overflow: hidden;
+  max-height: 40%;
   /* min-height: 15px; */
 }
 .card-img-top{
